# Spotify-money-calculator

./: Dockerfile  Makefile  README.md  docker-compose.yml  env.example  main.py  pyproject.toml  router.py
gateways/: app_values.py  discogs_gateway.py  spotify_gateway.py
services/: cache.py  websocket.py
static/: error.html  home.html  index.html  spotify_oauth_success.html
values/: discogs_values.py  spotify_values.py
